Bug 217965 - Missing labels in schedule editor
Summary: Missing labels in schedule editor
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-09 10:46 UTC by David Houlden
Modified: 2009-12-09 21:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2009-12-09 10:46:12 UTC
Version:            (using KDE 4.3.3)
OS:                Linux

In the scheduled transaction editor dialog the labels are missing for the following fields.
Account
Memo
Amount
Status
Comment 1 Cristian Oneț 2009-12-09 19:41:20 UTC
SVN commit 1060719 by conet:

BUG: 217965

Add the missing labels. On the KDE3 version it worked in another way. The cell text for the non-edit widgets were drawn even when in edit mode but that didn't caused a problem like on Qt4 where for the labels only the text is drawn if the autoFillBackground property is false (default). So instead of setting autoFillBackground to true to draw the whole area of the label add the missing labels and don't draw the cell text when we're in edit mode.

 M  +19 -8     dialogs/transactioneditor.cpp  
 M  +5 -1      widgets/transaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1060719
Comment 2 Cristian Oneț 2009-12-09 21:26:56 UTC
SVN commit 1060761 by conet:

BUG: 217965

Second part of the fix for the investment transactions.
Add the missing labels. On the KDE3 version it worked in another way. The cell text for the non-edit widgets were drawn even when in edit mode but that didn't caused a problem like on Qt4 where for the labels only the text is drawn if the autoFillBackground property is false (default). So instead of setting autoFillBackground to true to draw the whole area of the label add the missing labels and don't draw the cell text when we're in edit mode.

 M  +27 -19    dialogs/investtransactioneditor.cpp  
 M  +5 -0      widgets/transaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1060761